force-app/main/default/objects/Case/fields/assigned_User__c.field-meta.xml
<CustomField>
    <fullName>assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>