force-app/main/default/objects/Case/fields/issue_Type__c.field-meta.xml
<CustomField>
    <fullName>issue_Type__c</fullName>
    <label>issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
                <default>true</default>
                <label>Hardware</label>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Require New Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>