force-app/main/default/objects/Case/fields/PotentialLiability__c.field-meta.xml
<CustomField>
    <fullName>potentialLiability__c</fullName>
    <label>Potential Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>