force-app/main/default/objects/Case/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <businessProcess>Ticket Support</businessProcess>
    <label>Ticket</label>
</RecordType>